--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -83,3 +83,22 @@ services:
       MAIL_PASSWORD: ""
       FROM_NAME: "Pushpit"
       FROM_ADDRESS: pushpit@musixverse.com
+
+  rabbitmq:
+    image: 'rabbitmq:3.9-alpine'
+    ports:
+      - '5672:5672'
+    deploy:
+      mode: replicated
+      replicas: 1
+    volumes:
+      - ./db-data/rabbitmq:/var/lib/rabbitmq/
+
+  listener-service:
+    build:
+      context: ../listener-service
+      dockerfile: ../listener-service/listener-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
