--- a/project/swarm.yml
+++ b/project/swarm.yml
@@ -1,10 +1,30 @@
 version: '3'
 
 services:
-  broker-service:
-    image: pushpit07/broker-service:1.0.0
+  caddy:
+    image: tsawler/micro-caddy:1.0.0
+    deploy:
+      mode: replicated
+      replicas: 1
     ports:
-      - "8080:80"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - caddy_data:/data
+      - caddy_config:/config
+
+  front-end:
+    image: pushpit07/front-end:1.0.2
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      BROKER_URL: "http://backend"
+
+  broker-service:
+    image: pushpit07/broker-service:1.0.1
+    ports:
+      - "8080:8080"
     deploy:
       mode: replicated
       replicas: 1
@@ -80,7 +100,6 @@ services:
     image: 'postgres:14.2'
     ports:
       - "5433:5432"
-    restart: always
     deploy:
       mode: replicated
       replicas: 1
@@ -90,3 +109,8 @@ services:
       POSTGRES_DB: users
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+
+volumes:
+  caddy_data:
+    external: true
+  caddy_config:
